# esp32_decontamination-chamber_TFT-ILI9488_LVGL

./: README.md  other_stuff.txt  platformio.ini  test.c
src/: config.h  main.cpp  ui.c  ui.h  ui_Screen1.c  ui_Screen1.h  ui_font_Montserrat150.c  ui_font_Montserrat60.c  ui_font_Montserrat90.c
src/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_Screen1.c  ui_Screen1.h  ui_Screen2.c  ui_Screen2.h  ui_Screen3.c  ui_Screen3.h  ui_Screen6.c  ui_Screen6.h  ui_comp.c  ui_comp.h  ui_comp_changescreen.c  ui_comp_changescreen.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_modselbtn.c  ui_comp_modselbtn.h  ui_comp_settingwidget.c  ui_comp_settingwidget.h  ui_img_arrow_3_png.c  ui_img_image_2_png.c  ui_img_image_8_png.c  ui_img_modeset_png.c  ui_themes.c  ui_themes.h
